@@ -136,8 +136,12 @@ month, and year.
 
 <!-- ##### TYPEDEF GTime ##### -->
 <para>
-Simply a replacement for <type>time_t</type>. Unrelated to #GTimer.
+Simply a replacement for <type>time_t</type>. It has been deprected
+since it is <emphasis>not</emphasis> equivalent to <type>time_t</type> 
+on 64-bit platforms with a 64-bit <type>time_t</type>. 
+Unrelated to #GTimer.
 </para>
+
 
 <para>
 Note that <type>GTime</type> is defined to always be a 32bit integer,
@@ -346,15 +350,11 @@ Sets the value of a #GDate from a Julian day number.
 
 <!-- ##### FUNCTION g_date_set_time ##### -->
 <para>
-Sets the value of a date from a #GTime (<type>time_t</type>) value. 
-To set the value of a date to the current day, you could write:
-<informalexample><programlisting>
-g_date_set_time (date, time (NULL));
-</programlisting></informalexample>
+
 </para>
 
-@date: a #GDate.
-@time_: #GTime value to set.
+@date:
+@time_: 
 
 
 <!-- ##### FUNCTION g_date_set_parse ##### -->
