@@ -27,6 +27,9 @@
 #ifndef __G_DATE_H__
 #define __G_DATE_H__
 
+#include <time.h>
+
+#include <glib/gtypes.h>
 #include <glib/gquark.h>
 
 G_BEGIN_DECLS
@@ -165,8 +168,14 @@ void         g_date_clear                 (GDate       *date,
  */
 void         g_date_set_parse             (GDate       *date,
                                            const gchar *str);
+void         g_date_set_time_t            (GDate       *date,
+					   time_t       timet);
+void         g_date_set_time_val          (GDate       *date,
+					   GTimeVal    *timeval);
+#ifndef G_DISABLE_DEPRECATED
 void         g_date_set_time              (GDate       *date,
                                            GTime        time_);
+#endif
 void         g_date_set_month             (GDate       *date,
                                            GDateMonth   month);
 void         g_date_set_day               (GDate       *date,
