@@ -1,3 +1,9 @@
+2005-11-17  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/tmpl/date.sgml: 
+	* glib/glib-sections.txt: Add g_date_set_time_t,
+	g_date_set_time_val.
+
 2005-11-08  Matthias Clasen  <mclasen@redhat.com>
 
 	* glib/tmpl/threads.sgml: Improve GOnce docs.
